--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "d3": "^5.9.1",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "sanitize.css": "^8.0.0",
