--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "dart-sass": "^1.15.1",
+    "dotenv": "^6.2.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
