--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["airbnb"]
+  "presets": ["airbnb", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-syntax-dynamic-import", "@babel/plugin-syntax-object-rest-spread"]
 }
