--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "fibers": "^3.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "postcss-loader": "^3.0.0",
