--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "dart-sass": "^1.17.2",
-    "dotenv": "^6.2.0",
     "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.11.0",
@@ -53,6 +52,7 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "multi-env": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
@@ -62,5 +62,13 @@
     "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
+  },
+  "config": {
+    "multi-env": {
+      "files": [
+        "./project.local.env",
+        "./project.env"
+      ]
+    }
   }
 }
